--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/holo_blue_dark"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textSize="20sp"
                 android:text="主页面"/>
         </LinearLayout>
         <!--侧边栏-->
@@ -29,8 +31,9 @@
             android:layout_height="match_parent"
             android:layout_gravity="left"
             android:fitsSystemWindows="true"
-            app:headerLayout="@layout/header_layout"
-            app:menu="@menu/main">
+            app:headerLayout="@layout/left_header"
+            app:menu="@menu/left_menu"
+            >
 
         </android.support.design.widget.NavigationView>
     </android.support.v4.widget.DrawerLayout>
